--- a/css/style.css
+++ b/css/style.css
@@ -9,30 +9,21 @@ hr{
 	margin: 20px 0
 }
 h1{
-	font-size: 40px;
-	font-family: 'Lobster', sans-serif;
-	margin: .5em .5em .5em 0em;
-	color: #c1640f;
+	font-size: 28px;
+
 }
 h2{
 	font-size:34px;
-	padding-bottom: 20px;
-	color: #a21010;
-	text-transform: uppercase;
+
 
 }
 h3{
 	font-size:34px;
-	padding-top: 1em;
-	padding-bottom: 1em;
-	color: #a21010;
-	text-transform: uppercase;
+
 }
 h4{
 	font-size: 20px;
-    margin: 1em 0em;
-    color: #a21010;
-    text-transform: uppercase;
+
 }
 p {
     margin-bottom:  1em;
@@ -41,6 +32,10 @@ p {
 }
 a{
 	text-decoration: none;
+}
+header{
+	padding-top: .5em;
+	padding-bottom: .5em;
 }
 section{
 	padding-top: 1em;
@@ -54,4 +49,27 @@ footer img{
 	width: 5%;
 	margin:1em;
 }
+
 /*particulares*/
+
+/*primer sección*/
+
+.navbar-brand{
+	color: gray
+}
+.navbar-brand--title{
+	font-color:gray;
+}
+.text-right{
+	text-align: right
+}
+.text-left{
+	text-align: left;
+}
+.navbar-button{
+	background-color: #0081ff;
+	color: white;
+	border-radius: .5em;
+	padding: .7em 1em;
+	font-size: 16px;
+}
