--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,8 @@ a{
 header{
 	padding-top: .5em;
 	padding-bottom: .5em;
+		height: 60px;
+
 }
 section{
 	padding-top: 1em;
@@ -66,10 +68,51 @@ footer img{
 .text-left{
 	text-align: left;
 }
-.navbar-button{
+.button{
 	background-color: #0081ff;
 	color: white;
 	border-radius: .5em;
 	padding: .7em 1em;
 	font-size: 16px;
+}
+
+/*seccion 02*/
+.hero-image{
+	display: table;
+	width: 100%;
+	min-height: 515px;
+	padding: 6em 0;
+	text-align: center;
+	background: url(../img/bg-masthead.jpg) no-repeat bottom center scroll;
+	background-color: #000;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+}
+.sombra {
+  position: absolute;
+  background-color: #000000;
+  height: 514px;
+  width: 100%;
+  opacity: .3;
+  top: 60px;
+}
+.hero-image--tittle{
+	color: white;
+	margin: 1em 0em;
+	font-size: 50px;
+}
+.hero-input{
+	padding: .5rem 1rem;
+	font-size: 1.25rem;
+	line-height: 1.5;
+	border-radius: .3rem;
+	width: 80%
+}
+.hero-button{
+	padding: .5rem 1rem;
+	font-size: 1.25rem;
+	line-height: 1.5;
+	border-radius: .3rem;
 }
