--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,9 @@ footer img{
 .text-left{
 	text-align: left;
 }
+.text-center{
+	text-align: center;
+}
 .button{
 	background-color: #0081ff;
 	color: white;
@@ -115,4 +118,20 @@ footer img{
 	font-size: 1.25rem;
 	line-height: 1.5;
 	border-radius: .3rem;
+}
+/*seccion03*/
+.servicios{
+	background-color: #f8f9fb;
+	padding-top: 4em;
+	padding-bottom: 4em;
+}
+.servicios h3{
+	font-size: 1.8rem;
+	margin-top: 1em;
+	margin-bottom: .5em;
+}
+.servicios p{
+	color: #9E9E9E;
+	font-size: 1.05rem;
+	font-weight:lighter;
 }
